src/test/compile-fail/import3.rs
// error-pattern: main is not a module or crate
import main.bar;

fn main(vec[str] args) {
  log "foo";
}
